# QMT-projects

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml
.claude/skills/xtquant-api-download_finance/: REFERENCE.md  SKILL.md
.claude/skills/xtquant-api-download_finance/scripts/: download_financial_data.py
.claude/skills/xtquant-api-download_history_data/: REFERENCE.md  SKILL.md
.claude/skills/xtquant-api-download_history_data/scripts/: download_history_data.py  download_history_data2.py
.claude/skills/xtquant-api-get-buysellvol/: SKILL.md
.claude/skills/xtquant-api-get-finance/: REFERENCE.md  SKILL.md
.claude/skills/xtquant-api-get-finance/scripts/: get_financial_data.py
.claude/skills/xtquant-api-get-instrument-detail/: SKILL.md
.claude/skills/xtquant-api-get-stock-list/: REFERENCE.md  SKILL.md
.claude/skills/xtquant-api-get-stop-price/: SKILL.md
.claude/skills/xtquant-api-get_market_data_ex/: REFERENCE.md  SKILL.md
.claude/skills/xtquant-api-get_market_data_ex/scripts/: get_market_data_ex.py
docs/superpowers/specs/: 2026-06-18-paper-broker-design.md  2026-06-18-quant-runtime-design.md
scripts/: run_backtest.py  setup_xtquant.py
src/qmtquant/: __init__.py  cli.py  config.py
src/qmtquant/backtest/: __init__.py  analyzers.py  engine.py
src/qmtquant/data/: __init__.py  feeds.py
src/qmtquant/data/sources/: __init__.py  base.py  csv.py  synthetic.py  xtquant_source.py
src/qmtquant/live/: __init__.py  broker.py  paper_broker.py  xtquant_broker.py
src/qmtquant/plotting/: __init__.py  plot.py
src/qmtquant/runtime/: __init__.py  engine.py  feed.py  result.py  strategy.py
src/qmtquant/strategies/: __init__.py  sma_cross.py
tests/: conftest.py  test_data.py  test_imports.py  test_live_stubs.py  test_plot.py  test_runtime.py  test_strategy_engine.py
