[build-system]
# Hatchling is a lightweight, standards-based build backend that handles the
# src-layout cleanly without extra configuration boilerplate.
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qmtquant"
version = "0.1.0"
description = "A unified Python quant runtime: one strategy across backtest/paper/live over A-share data via xtquant/miniQMT."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "qmtquant" }]
keywords = ["quant", "backtest", "paper-trading", "trading", "xtquant", "qmt", "a-share"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]

# Single source of truth for runtime dependencies. The custom runtime depends
# only on numpy + pandas (no backtrader). numpy is held <2 because the live path
# uses 迅投 miniQMT's bundled xtquant, whose compiled .pyd extensions are built
# against the numpy 1.x C-API; pandas held <3 as the validated line on Py3.10/3.11.
dependencies = [
    "numpy>=1.26,<2",
    "pandas>=2.2,<3",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
qmtquant = "qmtquant.cli:main"

[project.urls]
Homepage = "https://example.invalid/qmtquant"

[tool.hatch.build.targets.wheel]
# src-layout: the importable package lives under src/.
packages = ["src/qmtquant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
